--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
   ],
   "dependencies": {
     "angular": "1.4.9",
-    "angular-ui-router": "^0.2.17",
+    "angular-ui-router": "~0.2.17",
     "bootstrap": "^3.3.6"
   }
 }
